# django-docker

./: .env  .pylintrc  CONTRIBUTORS.txt  Dockerfile  README.md  db.sqlite3  docker-local.yml  docker-production.yml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: django.yml
apps/biblioteca/: admin.py  models.py  serializers.py  urls.py  views.py
apps/biblioteca/migrations/: 0001_initial.py  0002_lendbooks_is_free.py  0003_remove_lendbooks_is_free_books_is_free.py  0004_alter_lendbooks_fecha_devolucion.py
apps/chat/: consumers.py  routing.py
apps/ecommerce/: admin.py  models.py  serializers.py  urls.py  views.py
apps/projects/: Permissions.py  admin.py  models.py  serializers.py  urls.py  views.py
apps/task/: admin.py  models.py  serializers.py  urls.py  views.py
apps/task_controller/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/users/: UserSerializers.py  admin.py  models.py  urls.py  views.py
compose/local/: Dockerfile
compose/production/: Dockerfile
config/: api_router.py  asgi.py  roles.py  settings.py  urls.py
config/settings/: base.py  local.py  production.py
config/utils/: choices.py  models.py  pagination.py
seed/: authors.json  books.json  category_product.json  comment_product.json  lendBooks.json  photo_product.json  product.json  projects.json  task.json  tasks.json  token.json  user.json  users.json
tests/: conftest.py  factories.py  test_ecommerce.py  test_project.py  test_setup_base.py  test_task.py  test_task_controller.py  test_users.py
tests/providers/: test_providers.py
(+13 files in other folders)
