[metadata]
name = TestDocker
version = 1.0.0
description = Descripción del proyecto
author = Adrian Stiven
author_email = jimenezcardenasad@gmail.com
url = None
license = None

[options]
packages = find:
install_requires =
    Django>=4.0

[options.packages.find]
exclude =
    tests

[options.extras_require]
dev =
    pytest
    flake8
    otras_herramientas

[options.entry_points]
console_scripts =
    nombre_comando = paquete.modulo:funcion_principal

[bdist_wheel]
universal = 1